--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.85",
     "gatsby-source-prismic": "^3.2.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "prettier": "2.1.2"
